<resources>
    <string name="app_name">FarmModule</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Log-out</string>

    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="cpassword_hint">Confirm Password</string>
    <string name="login_name">Log-in!</string>
    <string name="reg_name">Register!</string>
    <string name="accept_statement">I accept the terms.</string>

    <string name="title_activity_home">Home</string>
    <string name="default_greet">Hello!</string>

    <string name="title_activity_register">Register</string>
    <string name="contacts_name">Contact List</string>
    <string name="add_contact">Add New Contact</string>

    <string name="title_activity_add_content">Add New Contact</string>
    <string name="name_hint">Name</string>
    <string name="age_hint">Age</string>
    <string name="add_contact_name">Add Contact</string>
    <string name="go_back">Go back</string>

    <string name="title_activity_view_contact">View Contacts</string>
    <string name="def_value">Default</string>

    <string name="title_activity_edit_contacts">Edit Contact</string>
    <string name="edit_contact_name">Edit Contact</string>
    <string name="delete_contact_name">Delete Contact</string>
</resources>
