<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.aspirev3.farmmodule.RegisterActivityFragment"
    tools:showIn="@layout/activity_register">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username_reg"
        android:hint="@string/username_hint"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="49dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password_reg"
        android:layout_below="@+id/username_reg"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="false"
        android:hint="@string/password_hint" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/cpassword_reg"
        android:layout_below="@+id/password_reg"
        android:layout_centerHorizontal="true"
        android:hint="@string/cpassword_hint" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg_name"
        android:id="@+id/register"
        android:background="@color/green"
        android:layout_marginTop="51dp"
        android:layout_below="@+id/accept"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept_statement"
        android:id="@+id/accept"
        android:singleLine="false"
        android:layout_below="@+id/cpassword_reg"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
