<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.aspirev3.farmmodule.HomeActivityFragment"
    tools:showIn="@layout/activity_home">


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contacts_name"
        android:id="@+id/contacts_button"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/title"
        android:layout_alignParentStart="true"
        android:background="@color/grey" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_logout"
        android:id="@+id/logout_button"
        android:background="@color/red"
        android:textColor="@color/white"
        android:layout_below="@+id/edit_contact_button"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/default_greet"
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_contact"
        android:id="@+id/edit_contact_button"
        android:layout_below="@+id/contacts_button"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:background="@color/grey" />
</RelativeLayout>
