<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddContactActivityFragment"
    tools:showIn="@layout/activity_add_contact">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name_add"
        android:hint="@string/name_hint"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/age_add"
        android:layout_alignStart="@+id/age_add"
        android:inputType="textCapWords" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/age_add"
        android:hint="@string/age_hint"
        android:layout_below="@+id/name_add"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_contact_name"
        android:id="@+id/add_contact_button"
        android:background="@color/grey"
        android:layout_below="@+id/age_add"
        android:layout_marginTop="30dp"
        android:layout_alignStart="@+id/age_add"
        android:layout_alignEnd="@+id/age_add" />
</RelativeLayout>
