<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.aspirev3.farmmodule.EditContactsActivityFragment"
    tools:showIn="@layout/activity_edit_contacts">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name_field"
        android:hint="@string/name_hint"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/age_field"
        android:layout_alignStart="@+id/age_field"
        android:inputType="textCapWords" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/age_field"
        android:hint="@string/age_hint"
        android:layout_below="@+id/name_field"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_contact_name"
        android:id="@+id/edit_contact_button"
        android:layout_below="@+id/age_field"
        android:layout_marginTop="30dp"
        android:layout_alignStart="@+id/age_field"
        android:layout_alignEnd="@+id/age_field"
        android:background="@color/grey" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back"
        android:id="@+id/go_back"
        android:singleLine="true"
        android:background="@color/grey"
        android:layout_below="@+id/delete_contact_button"
        android:layout_marginTop="30dp"
        android:layout_alignStart="@+id/delete_contact_button"
        android:layout_alignEnd="@+id/delete_contact_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="delete_contact"
        android:id="@+id/delete_contact_button"
        android:layout_below="@+id/edit_contact_button"
        android:layout_alignStart="@+id/edit_contact_button"
        android:layout_alignEnd="@+id/edit_contact_button"
        android:background="@color/red"
        android:layout_marginTop="20px" />

</RelativeLayout>
